implatação de todo o corpo da page com formulario e texto informativo

--- a/index.html
+++ b/index.html
@@ -17,6 +17,82 @@
                 <a href="">Requisitos para Participar</a>
             </div>
             <button>Login</button>
-    </nav>    
+    </nav> 
+    <div id="sectionCenter">
+        <h1 id="titleSectionCenter"><b>BOOTCAMP DNC</b></h1>
+        <p id="textSectionCenter">
+            Esse será um evento exclusivo para todos os alunos <br>
+            da <b>DNC</b>, que querem <span class="destac">acelerar a carreira</span> com uma <br>
+            semana intensiva de conteúdo de mercado entre <br>
+            <span class="destac">BACK-END, FRONT-END & BANCO DE DADOS</span>.
+        </p>
+        <form action="https://formspree.io/f/xknadprd" method="post">
+            <p class="formLabel">
+                <label>Nome:</label>
+                <input type="text" required name="nome" placeholder="Insira seu nome aqui" class="inputText">
+            </p>
+            <p class="formLabel">
+                <label>Sobrenome:</label>
+                <input type="text" required name="Sobrenome" placeholder="Insira seu sobrenome aqui" class="inputText">
+            </p>
+            <p class="formLabel">
+                <label>Áreas de Interesse:</label>
+            </p>
+            <p class="formLabel">
+                <ul id="inputCheckbox">
+                    <li> <input type="checkbox" name="Front-End" id="">Front-End</li>
+                    <li> <input type="checkbox" name="Back-End" id="">Back-End</li>
+                    <li> <input type="checkbox" name="Banco de Dados" id="">Banco de Dados</li>
+                </ul>
+            </p>
+            <p class="formLabel">
+                <label>Email:</label>
+                <input type="email" required name="E-mail" class="inputText" placeholder="Insira seu e-mail aqui">
+            </p>
+            <p class="formLabel">
+                <label>Telefone:</label>
+                <input type="text" required name="Telefone" class="inputText" placeholder="(99) 99999-9999">
+            </p>
+            <p class="formLabel">
+                <label>Insira uma frase criativa aqui:</label>
+                <input type="text" name="fraseCriativa" class="inputText" placeholder="Qual frase criativa você gostaria de falar? :)">
+            </p>
+            <p class="formLabel">
+                <button type="submit" id="buttonSubmit">Login</button>
+            </p>
+        </form>
+    </div>   
+    <div id="sectionRodape">
+        <div class="linkRodape">
+            <h1>Escola</h1> 
+            <ul>
+                <li><a href="">Formação em Tecnologia</a></li>                
+                <li><a href="">Formação em Marketing</a></li>
+                <li><a href="">Formação em Dados</a></li>
+                <li><a href="">Formação em Projetos</a></li>
+                <li><a href="">Formação em Produto</a></li>                
+            </ul>
+        </div>
+        <div class="linkRodape">
+            <h1>Sobre DNC</h1>
+            <ul>
+                <li><a href="">Sobre a DNC</a></li>                
+                <li><a href="">História</a></li>
+                <li><a href="">Missão e Valores</a></li>   
+                <li><a href="">Trabalhe Conosco</a></li> 
+                <li><a href="">Conteúdo Gratuito</a></li>           
+            </ul>
+        </div>
+        <div class="linkRodape">
+            <p>
+                © 2022 DTC Treinamentos & Consultoria<br>
+                LTDA | CNPJ: 27.995.577/0001-37 | R. <br>
+                Justino Cobra, 61 – Vila Ema | São José dos <br>
+                Campos – SP | CEP 12243-030
+            </p>
+        </div>
+        
+    </div>
+    <p><a href="">Termos de Uso | Política de Privacidade</a></p>
 </body>
 </html>
