--- a/index.html
+++ b/index.html
@@ -62,37 +62,54 @@
             </p>
         </form>
     </div>   
-    <div id="sectionRodape">
-        <div class="linkRodape">
-            <h1>Escola</h1> 
-            <ul>
-                <li><a href="">Formação em Tecnologia</a></li>                
-                <li><a href="">Formação em Marketing</a></li>
-                <li><a href="">Formação em Dados</a></li>
-                <li><a href="">Formação em Projetos</a></li>
-                <li><a href="">Formação em Produto</a></li>                
-            </ul>
+
+    <footer>
+        <div class="linhaOne">
+                <nav>
+                    <h5>Escolas</h5>
+                    <ul>
+                        <li>
+                            <a href="">Formação em Tecnologia</a>
+                        </li>                
+                        <li>
+                            <a href="">Formação em Marketing</a>
+                        </li>
+                        <li>
+                            <a href="">Formação em Dados</a>
+                        </li>
+                        <li>
+                            <a href="">Formação em Projetos</a>
+                        </li>
+                        <li>
+                            <a href="">Formação em Produto</a>
+                        </li>                
+                    </ul>
+                </nav>
+                <nav>
+                    <h5>Sobre DNC</h5>
+                    <ul>               
+                        <li>
+                            <a href="">História</a>
+                        </li>
+                        <li>
+                            <a href="">Missão e Valores</a>
+                        </li>   
+                        <li>
+                            <a href="">Trabalhe Conosco</a>
+                        </li> 
+                        <li>
+                            <a href="">Conteúdo Gratuito</a>
+                        </li>           
+                    </ul>
+                </nav>
+                <div class="endereco">
+                    © 2022 DTC Treinamentos & Consultoria LTDA | CNPJ: 27.995.577/0001-37 | R. Justino Cobra, 61 – Vila Ema | São José dos Campos – SP | CEP 12243-030
+                </div>
         </div>
-        <div class="linkRodape">
-            <h1>Sobre DNC</h1>
-            <ul>
-                <li><a href="">Sobre a DNC</a></li>                
-                <li><a href="">História</a></li>
-                <li><a href="">Missão e Valores</a></li>   
-                <li><a href="">Trabalhe Conosco</a></li> 
-                <li><a href="">Conteúdo Gratuito</a></li>           
-            </ul>
+        <div class="linhaTwo">
+            <a href="">Termos de Uso</a>
+            <a href="">Políticas de Privacidade</a>
         </div>
-        <div class="linkRodape">
-            <p>
-                © 2022 DTC Treinamentos & Consultoria<br>
-                LTDA | CNPJ: 27.995.577/0001-37 | R. <br>
-                Justino Cobra, 61 – Vila Ema | São José dos <br>
-                Campos – SP | CEP 12243-030
-            </p>
-        </div>
-        
-    </div>
-    <p><a href="">Termos de Uso | Política de Privacidade</a></p>
+    </footer>
 </body>
 </html>
